--- a/font-end/package.json
+++ b/font-end/package.json
@@ -12,8 +12,10 @@
     "antd": "^4.2.2",
     "axios": "^0.20.0",
     "jsonwebtoken": "^8.5.1",
+    "papaparse": "^5.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-file-reader": "^1.1.4",
     "react-responsive": "^8.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
