--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.2.2",
     "axios": "^0.20.0",
+    "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "papaparse": "^5.3.0",
     "react": "^16.13.1",
