--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,7 +20,8 @@
     "react-responsive": "^8.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "sweetalert2": "^10.14.1"
   },
   "scripts": {
     "start": "react-scripts start",
