--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "papaparse": "^5.3.0",
+    "pdfmake": "^0.1.70",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-file-reader": "^1.1.4",
