--- a/back-end/package.json
+++ b/back-end/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "caniuse-lite": "^1.0.30001208",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
